--- a/Html/home.html
+++ b/Html/home.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#products">Products</a></li>
-                <li><a href="About_us.html">About us</a></li>
+                <li><a href="about_us.html">About us</a></li>
                 <li><a href="contact_us.html">Contact Us</a></li>
             </ul>
         </nav>
